<?xml version="1.0" encoding="UTF-8"?>

<!--        Copyright Alibaba Group Holding Ltd.-->

<!--        Licensed under the Apache License, Version 2.0 (the "License");-->
<!--        you may not use this file except in compliance with the License.-->
<!--        You may obtain a copy of the License at-->

<!--        http://www.apache.org/licenses/LICENSE-2.0-->

<!--        Unless required by applicable law or agreed to in writing, software-->
<!--        distributed under the License is distributed on an "AS IS" BASIS,-->
<!--        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--        See the License for the specific language governing permissions and-->
<!--        limitations under the License.-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--    Don't modify the groupId, artifactId and version !  -->
    <!--    不要修改 groupId, artifactId 以及 version ！ -->
    <groupId>com.alibaba.lindorm.tsdb.contest</groupId>
    <artifactId>lindorm-tsdb-contest-java</artifactId>
    <version>1.0</version>

    <dependencies>
        <!--zstd-->
        <dependency>
            <groupId>com.github.luben</groupId>
            <artifactId>zstd-jni</artifactId>
            <version>1.4.4-9</version>
            <!--            <scope>system</scope>-->
            <!--            <systemPath>${project.basedir}/thirdlibs/zstd-jni-1.4.4-9.jar</systemPath>-->
        </dependency>
        <!--junit-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <!--            <scope>system</scope>-->
            <!--            <systemPath>${project.basedir}/thirdlibs/junit-4.13.2.jar</systemPath>-->
        </dependency>
        <!--工具包-->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>1.3</version>
            <!--            <scope>system</scope>-->
            <!--            <systemPath>${project.basedir}/thirdlibs/hamcrest-core-1.3.jar</systemPath>-->
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>19.0</version>
            <!--            <scope>system</scope>-->
            <!--            <systemPath>${project.basedir}/thirdlibs/guava-19.0.jar</systemPath>-->
        </dependency>
        <!--log4j-->
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
            <!--            <scope>system</scope>-->
            <!--            <systemPath>${project.basedir}/thirdlibs/log4j-1.2.17.jar</systemPath>-->
        </dependency>
        <!--direct IO-->
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>4.0.0</version>
            <!--            <scope>system</scope>-->
            <!--            <systemPath>${project.basedir}/thirdlibs/jna-5.2.0.jar</systemPath>-->
        </dependency>

    </dependencies>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-exports=java.base/jdk.internal.access=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/jdk.internal=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <!--                            <mainClass>com.alibaba.lindorm.contest.test.TestMyDb</mainClass>-->
                            <mainClass>com.alibaba.lindorm.contest.extendstructs.directio.DirectIOTestMain</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Class-Path>.</Class-Path>
                        </manifestEntries>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>assembly.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>